# midi

./: README.md
Plus/boards/de0-cv/: 05_synthesize_for_fpga.bash  inmp441_mic_i2s_receiver.sv  note.sv  timer.sv  top.qsf  top.sdc  top.sv
Plus/boards/omdazz/: top.qsf  top.sv
Plus/design/: code_demo.mem16  fifo.v  uart.v  yrv_cpu.v  yrv_mcu.v
Plus/programs/: coremark.bat  drive_uart.bat  load.bat  read_uart.bat  tetris.bat
Plus/programs/01_code/: main.c
Plus/programs/01_code/run/: code_demo.mem32
Plus/programs/01_echo/: Makefile  code_demo.mem16  code_demo.mem32  ee_printf.c  final  final.elf  main.c  memory_mapped_registers.h
Plus/programs/01_echo/barebones/: ee_printf.c
Plus/programs/coremark/: Makefile  bcopy.c  code_demo.mem16  code_demo.mem32  core_list_join.c  core_main.c  coremark.h  crt0.s  final  final.elf  memcpy.c  memmove.c  muldi3.S  muldi3.S_native  riscv-asm.h  strlen.c  trap_ack.s  yrv.ld
Plus/programs/coremark/barebones/: core_portme.c  core_portme.h  ee_printf.c_
Plus/programs/coremark/run/: code_demo.mem16
Plus/programs/rust-rv/: Cargo.toml  riscv32ic-unknown-none-elf.json
Plus/programs/rust-rv/app/: Cargo.toml  build.rs  code.mem16  command.txt  load.bat  riscv32ia-unknown-none-elf.json  riscv32ic-unknown-none-elf.json
Plus/programs/rust-rv/app/.cargo/: config
Plus/programs/rust-rv/app/src/: adc.rs  dht11.rs  main.rs  midi.rs  serial.rs  timer.rs
Plus/scripts/: 00_setup.source.bash  06_configure_fpga.source.bash  07_upload_soft_to_fpga.source.bash
Plus/timer/: a.out  simalte.sh  tb.sv
(+6 files in other folders)
