[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv-rt = { path = "../riscv-rt" }
panic-halt = "0.2.0"
volatile = "0.2.6"
spin = "0.5.2"
linked_list_allocator = "0.10.5" 

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


